# sqltex

./: .project  Makefile.am  README.md  SQLTeX  SQLTeX.cfg  SQLTeX.html  SQLTeX.pl  SQLTeX.ps  SQLTeX.tex  configure.ac  install  readme.txt
doc/: Makefile  Makefile.am  SQLTeX.tex
documentation/: SQLTeX.tex
man/: Makefile  Makefile.am  SQLTeX.1  SQLTeX.man  sqltex.man
src/: Makefile  Makefile.am  SQLTeX  SQLTeX.cfg  SQLTeX.pl  install  sqltex
testSQLTeX/: sqltex-tc1.tex  sqltex-tc2.tex  sqltex-tc3.tex  sqltex-tc4.tex  sqltex-tc5.tex  sqltex-tc6.tex  sqltex-tc7.tex  sqltex-tc8.tex  sqltex-tc9.tex  testSQLTeX.sql  testsqltex.mwb  testsqltex.sh
testSQLTeX/reference/: sqltex-tc1_20190047.tex  sqltex-tc1_20190062.tex  sqltex-tc1_20190091.tex  sqltex-tc1_20190138.tex  sqltex-tc1_20190205.tex  sqltex-tc1_20190216.tex  sqltex-tc2_stx.tex  sqltex-tc3_stx.tex  sqltex-tc4_nl.tex  sqltex-tc4_nl1.tex  sqltex-tc4_nl2.tex  sqltex-tc5_stx_20190047.tex  sqltex-tc5_stx_20190091.tex  sqltex-tc5_stx_20190216.tex  sqltex-tc5_stx_3.tex  sqltex-tc5_stx_4.tex  sqltex-tc5_stx_5.tex  sqltex-tc7_stx.tex  sqltex-tc8_stx.tex  sqltex-tc9_stx.tex
